--- a/frontend/src/views/erzffd.html
+++ b/frontend/src/views/erzffd.html
@@ -87,4 +87,51 @@ export default {
 }
 </script>
 <style scoped lang="scss">
+/*
+<div class="container-fluid">
+          <div class="informations row mt-3">
+            <p class="userNames"> {{ userInfos.firstName}} {{ userInfos.lastName }} </p>
+        </div>
+        <div class="post row">
+            <p name="post" id="post" cols="30" rows="2"></p>
+            <img src="@/assets/icon-grey.png" alt="image postée" max-width=100% class="img-fluid" height: auto>
+        </div>
+        <div class="comments row mt-2" >
+            <input type="text" class="input_comments" placeholder="Rédiger un commentaire">
+        </div>
+    </div>
+    .container-fluid {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    columns: 3;
+    max-width: 600px;
+    background-color: grey;
+}
 
+.informations {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background: $groupBorder;
+    border-radius: 12px 12px 0 0;
+}
+.post {
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    border-radius: 8px 8px 0 0;
+    background-color: white;
+}
+.img-fluid {
+ width: 100%;   
+}
+.comments {
+    width: 100%;
+}
+.input_comments {
+    color: black;
+    border-radius: 12px;
+}
+*/
